--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Configuration for DB connection
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 
+# Turn off the Spring Boot Banner
+spring.main.banner-mode=off
+
+# Reduce logging level - set logging level to warn
+logging.level.root=warn
